<resources>
    <string name="app_name">Zoo</string>
    <string name="sort_filter">Filter</string>
    <string name="display_fragment">DataDisplayFragment</string>
    <string name="data_create_fragment">DataDisplayFragment</string>
    <string name="animal_name">Name:</string>
    <string name="animal_age">Age:</string>
    <string name="animal_color">Color:</string>
    <string name="description_name">Some name</string>
    <string name="description_age">Some Age</string>
    <string name="register_of_animals">Register of animals</string>
    <string name="save_button">Save</string>
    <string name="enter_name">Enter name</string>
    <string name="enter_age">Enter age</string>
    <string name="enter_color">Enter color</string>
    <string name="name">Name</string>
    <string name="name_key">name</string>
    <string name="age_key">age</string>
    <string name="color_key">color</string>
    <string name="age_name">Age</string>
    <string name="color_name">Color</string>
    <string name="sort_by_color">sort by color</string>
    <string name="sort_by_age">sort by age</string>
    <string name="sort_by_name">sort by name</string>

</resources>