<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackground"
            android:focusable="true"
            android:padding="8dp">

            <TextView
                android:id="@+id/textName"
                style="@style/StaticTextStyle"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/animal_name" />

            <TextView
                android:id="@+id/textAge"
                style="@style/StaticTextStyle"
                android:layout_below="@+id/textName"
                android:layout_marginStart="30dp"
                android:layout_marginTop="16dp"
                android:text="@string/animal_age" />

            <TextView
                android:id="@+id/textColor"
                style="@style/StaticTextStyle"
                android:layout_below="@+id/textAge"
                android:layout_marginStart="19dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:text="@string/animal_color" />

            <TextView
                android:id="@+id/textDescriptionName"
                style="@style/TextDescriptionDataStyle"
                android:layout_toEndOf="@+id/textName"
                android:text="@string/description_name" />

            <TextView
                android:id="@+id/textDescriptionAge"
                style="@style/TextDescriptionDataStyle"
                android:layout_below="@+id/textDescriptionName"
                android:layout_toEndOf="@+id/textAge"
                android:text="@string/description_age" />

            <TextView
                android:id="@+id/textDescriptionColor"
                style="@style/TextDescriptionDataStyle"
                android:layout_below="@+id/textDescriptionAge"
                android:layout_toEndOf="@+id/textAge"
                android:text="@string/description_age" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</layout>